# mlops-course

./: README.md
lesson-01-uv-env/: predict.py  requirements.txt
lesson-02-dependency-upgrade/: pyproject.toml
lesson-03-formatting-and-linting/: prediction.py  pyproject.toml
lesson-04-static-typing/: config.json  train_model.py
lesson-05-modulation-isolation/: config.json  data.csv  predict.py  process.py
lesson-06-pytests/: preprocessing.py
lesson-07-project-documentation/: README.md  recommender.py  requirements.txt  train_and_save_model.py
lesson-08-code-review/: README.md  requirements
lesson-08-code-review/src/: data.py  features.py  main.py  model.py
lesson-08-code-review/tests/: test_data.py
lesson-6-pytests/: run.py
module-4-lesson-10-clearml-model-serving/: README.md
module-4-lesson-10-clearml-model-serving/clearml_serving/serving/: requirements.txt
module-4-lesson-14-clearml-agent/: train_single_model.py
module-4-lesson-2-mlflow-exp-management/: pyproject.toml  train_model.py
module-4-lesson-6-clearml-exp-management/: pyproject.toml  train_model.py
module3-lesson2/: main.py  recommender.py  requirements.txt  schemas.py  train_and_save_model.py
