[project]
name = "module-4-lesson-2-mlflow-exp-management"
version = "0.1.0"
description = "MLlow experiments management lesson"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "numpy==2.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
